# advent-of-code-2024

./: .gitignore  Cargo.toml  Dockerfile  README.md  cliff.toml  cog.toml  package-lock.json  package.json  profile.json
.github/workflows/: semantic-tags-after-release.yml
data/examples/: 10-1.txt  15-3.txt  15-5.txt  18-2.txt
data/inputs/: 03.txt
src/: main.rs
src/day_01/: mod.rs
src/day_02/: mod.rs
src/day_03/: mod.rs
src/day_04/: mod.rs
src/day_05/: mod.rs  parse.rs
src/day_xx/: mod.rs
src/shared/: day.rs  mod.rs  solution.rs  tree.rs
src/shared/grids/: grid.rs  infinite_grid.rs  mod.rs
src/template/: xx.rs
