[package]
name = "advent-of-code-2023"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2021"
rust-version = "1.78.0"
authors = ["Kristof Mattei"]
license-file = "LICENSE"
description = "Advent of Code 2023"
repository = "https://github.com/kristof-mattei/advent-of-code-2023"
keywords = ["playground"]
categories = ["playground"]

[lints.clippy]
# don't stop from compiling / running
all = "warn"
pedantic = "warn"
cargo = "warn"
# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[profile.dev.package.backtrace]
opt-level = 3

[features]
coverage = []

[dependencies]
regex = "1.10.4"
color-eyre = "0.6.3"
backtrace = "0.3.70"
once_cell = "1.19.0"
hashbrown = { version = "0.14.5", default-features = false, features = [
    "ahash",
    "inline-more",
] }

# We compile the Docker container with musl to get a static library. Smaller, faster.
# BUT that means that we need to include openssl
# Documentation on the syntax:
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
[target.'cfg(all(target_arch = "x86_64", target_os="linux", target_env="musl"))'.dependencies]
# openssl = { version = "0.10.36", features = ["vendored"] }
